# markdown-table-extractor

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  test_table.md
.github/scripts/: build.py
.github/workflows/: deploy-docs.yml
docs/: cleaner.html  extractor.html  index.html  merger.html  models.html  parser.html
src/: pyproject.toml
src/markdown_table_extractor/: CLAUDE.md  __init__.py  cli.py
src/markdown_table_extractor/core/: __init__.py  cleaner.py  extractor.py  index.py  merger.py  models.py  parser.py  parser_regular.py
src/markdown_table_extractor/core/__marimo__/session/: cleaner.py.json  index.py.json  merger.py.json  models.py.json  parser.py.json
src/markdown_table_extractor/llm/: __init__.py  extractor.py
src/markdown_table_extractor/llm/__marimo__/session/: extractor.py.json
src/mnt/user-data/outputs/src/markdown_table_extractor/llm/: __init__.py
tests/: test_extractor.py
