[project]
name = "markdown-table-extractor"
version = "0.1.0"
description = "Robust structured data extraction from markdown text, built with literate programming using marimo notebooks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Shakes", email = "your.email@example.com" }
]
keywords = [
    "markdown",
    "table",
    "extraction",
    "pandas",
    "data-science",
    "manuscripts",
    "structured-data",
    "llm",
    "marimo",
    "literate-programming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.0.0",
    "tabulate>=0.9.0", # Required for DataFrame.to_markdown()
    "rich>=13.0.0", # For beautiful CLI table display
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
# LLM-powered extraction (Simon Willison's llm library)
# https://llm.datasette.io/
llm = [
    "llm>=0.19",
    "pydantic>=2.0.0",
]
# Smart table merging with fuzzy matching
smart-merge = [
    "rapidfuzz>=3.0.0",
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",
    "marimo>=0.18.0",
]
# Full installation with all features
all = [
    "markdown-table-extractor[llm,smart-merge,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/markdown-table-extractor"
Documentation = "https://github.com/yourusername/markdown-table-extractor#readme"
Repository = "https://github.com/yourusername/markdown-table-extractor"
Issues = "https://github.com/yourusername/markdown-table-extractor/issues"

[project.scripts]
mte = "markdown_table_extractor.cli:main"

# ============================================================================
# Build System Configuration
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_table_extractor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# Development Dependencies (uv dependency groups)
# ============================================================================
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",
]
docs = [
    "marimo>=0.18.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
notebook = [
    "marimo>=0.18.0",
    "altair>=5.0.0",
    "polars>=1.0.0",
]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["markdown_table_extractor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--cov=markdown_table_extractor",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/markdown_table_extractor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ============================================================================
# uv Configuration
# ============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "marimo>=0.18.0",
]
